# VideoSubFinderRust

./: .gitignore  Cargo.toml  RELEASE_v1.0.0.md  readme.md
src/: main.rs
